--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -21,6 +21,7 @@
     <div class="container-fluid">
         <div class="card text-center mx-auto mt-3">
             <h1 class="text-center">Sign in</h1>
+            <%- include('../shared/messages.ejs') %>
             <div class="card-body">
                 <form action="/user/login" method="POST">
                     <div class="row">
