added header | updated Home UI

--- a/views/home/home-page.ejs
+++ b/views/home/home-page.ejs
@@ -27,7 +27,7 @@
             <% } %>
 
             <div class="col col-sm-12 col-md-6 col-lg-4">
-                <div class="card mt-2" style="width: 18rem;">
+                <div class="card mt-2" style="width: 18rem; box-shadow: 5px 2px 8px #474646;">
                     <img src="/<%= products[i].imgPath %>" height="220px" class="card-img-top" alt="Image not loaded">
                     <div class="card-body">
                         <div class="d-flex">
