--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -18,6 +18,11 @@
     </style>
 </head>
 <body>
+    <!-- Header -->
+    <%- include('../shared/header') %>
+    <!-- Header -->
+
+    <!-- Body -->
     <div class="container-fluid">
         <div class="card text-center mx-auto mt-3">
             <h1 class="text-center">Sign in</h1>
@@ -41,5 +46,6 @@
             </div>
         </div>
     </div>
+    <!-- Body -->
 </body>
 </html>
