--- a/views/user/my-cart.ejs
+++ b/views/user/my-cart.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title><%= title %></title>
     <!-- Bootstrap CDN -->
     <%- include('../shared/cdn') %>
     <!-- Bootstrap CDN -->
@@ -16,8 +16,9 @@
 
     <!-- Body -->
     <div class="container">
-        <h1>User Dashboard</h1>
+        My Cart
     </div>
     <!-- Body -->
+
 </body>
 </html>
