--- a/views/user/settings.ejs
+++ b/views/user/settings.ejs
@@ -10,10 +10,15 @@
     <!-- Bootstrap CDN -->
 </head>
 <body>
-    
+    <!-- Header -->
+    <%- include('../shared/header') %>
+    <!-- Header -->
+
+    <!-- Body -->
     <div class="container">
         My Settings
     </div>
+    <!-- Body -->
 
 </body>
 </html>
