Added My Cart functionality

--- a/views/user/booking-confirmation.ejs
+++ b/views/user/booking-confirmation.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title><%= title %></title>
     <!-- Bootstrap CDN -->
     <%- include('../shared/cdn') %>
     <!-- Bootstrap CDN -->
@@ -16,12 +16,18 @@
 
     <!-- Body -->
     <div class="container">
-        <div class="jumbotron text-center">
-            <h1>Welcome <%= username %>! </h1>
-            <a href="/" class="btn btn-success mt-3">Start Shopping</a>
-        </div>
+        <div class="jumbotron text-center text-info mt-2">
+            <h2> <%= confirmationMsg %> </h2>
+            <a href="/" class="btn btn-success">
+                Continue Shopping
+            </a>
 
+        </div>
     </div>
     <!-- Body -->
+
+    <!-- Footer -->
+    <%- include('../shared/footer') %>
+    <!-- Footer -->
 </body>
 </html>
