--- a/views/home/home-page.ejs
+++ b/views/home/home-page.ejs
@@ -38,7 +38,7 @@
                         </div>
                         <p class="card-text"><%= products[i].info %></p>
                         <a href="/details/<%= products[i]._id %>" class="btn btn-outline-warning">View details</a>
-                        <a href="#" class="btn btn-outline-success">Add to cart</a>
+                        <a href="/user/cart/<%= products[i]._id %>" class="btn btn-outline-success">Add to cart</a>
                     </div>
                 </div>
             </div>
