--- a/views/home/item-details.ejs
+++ b/views/home/item-details.ejs
@@ -44,7 +44,7 @@
                 </table>
             </div>
             <div class="card-footer text-center">
-                <a href="/user/buy/<%= product._id %>" class="btn btn-outline-success w-50">Buy Now</a>
+                <a href="/user/cart/<%= product._id %>" class="btn btn-outline-success w-50">Continue to cart</a>
             </div>
         </div>
     </div>
