--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -36,17 +36,17 @@
                         <!-- <input type="email" name="email" id="email" value="abc@gmail.com"> -->
                     </td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <td>Gender</td>
                     <td>
                         <label for="gender"><%= profile.gender %></label>
-                        <!-- <select name="gender" id="gen">
+                        <select name="gender" id="gen">
                             <option value="Male">Male</option>
                             <option value="Female">Female</option>
                             <option value="Other">Other</option>
-                        </select> -->
+                        </select>
                     </td>
-                </tr>
+                </tr> -->
             </table>
         <!-- </form> -->
         <script>
