--- a/views/user/my-cart.ejs
+++ b/views/user/my-cart.ejs
@@ -26,6 +26,9 @@
                     <th>Action</th>
                 </tr>
                 <% var len = items.length; %>
+                <% var ids = []; %>
+                <% var item = []; %>
+                <% var totalPrice = 0; %>
                 <% for(var i = 0; i < len; i++) { %>
                     <tr>
                         <td>#<%= i+1 %></td>
@@ -36,8 +39,23 @@
                             <a href="/user/cart/delete/<%= items[i]._id %>" class="btn btn-danger">Remove</a>
                         </td>
                     </tr>
+                    <% item = items[i]._id + '-' + items[i].quantity %>
+                    <% ids.push(item) %>
+                    <% totalPrice += parseInt(items[i].quantity) * parseFloat(items[i].price); %>
                 <% } %>
             </table>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col col-12">
+                        <strong class="text-info">Total Price: <%= totalPrice %> Rs.</strong>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col col-12">
+                        <a href="/user/buy/<%= ids %>" class="btn btn-outline-success w-50">Buy Now</a>
+                    </div>
+                </div>
+            </div>
         <% } else { %>
             <div class="text-center mt-5">
                 <strong class="text-info">Your cart is empty.</strong> <br/>
