--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -22,6 +22,7 @@
                         <th>Sr. No.</th>
                         <th>Name</th>
                         <th>Price</th>
+                        <th>Quantity</th>
                         <th>Date</th>
                         <th>Status</th>
                     </tr>
@@ -31,6 +32,7 @@
                             <td>#<%= i+1 %></td>
                             <td><%= orders[i].prodName %></td>
                             <td><%= orders[i].price %> Rs.</td>
+                            <td><%= orders[i].quantity %></td>
                             <td><%= orders[i].purchaseDate %></td>
                             <td class="text-success">Purchased</td>
                         </tr>
